css/main.css
---
---

{% include_relative modules.css %}
{% include_relative grid.css %}
{% include_relative type.css %}
{% include_relative theme.css %}
{% pattern_css %}

.grey-text {
  color: var(--color-accent-dark);
}

a {
  color: #BFBFBF;
}

a:hover {
  color: #F47D97;
  transition: all 450ms ease;
}

.border {
  border: 1px solid #EDEDED;
}

.push-it {
  padding-bottom: 1.5em;
}

.h-1-6 {
  max-height: 15em;
  max-width: 15em;
}


@media only screen and (min-width: 38em) {

  .push-it {
    padding-bottom: 0em;
  }


}

